--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Hello Extensions",
-    "description": "Base Level Extension",
+    "name": "Applifo",
+    "description": "An extension to save page information and date as a string.",
     "version": "1.0",
     "manifest_version": 2,
     "browser_action": {
