--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,7 @@
         "contextMenus",
         "storage"
     ],
+    "content_security_policy": "script-src 'self' 'unsafe-inline'; object-src 'self'",
     "icons": {
         "16": "16.png",
         "32": "32.png",
@@ -28,3 +29,4 @@
         "128": "128.png"
     }
 }
+
