--- a/production/manifest.json
+++ b/production/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0",
     "manifest_version": 2,
     "browser_action": {
-        "default_popup": "index.html"
+        "default_popup": "new.html"
         
     },
     "content_scripts": [ 
@@ -13,10 +13,6 @@
             "js": ["content.js"]
         }
     ],
-    "background": {
-        "scripts": ["content.js"], 
-        "persistent": false
-    },
     "commands": {
         "_execute_browser_action": {
             "suggested_key": {
